# atomi

./: .gitignore  README.md  pyproject.toml
docs/: dependency_strategy.md  hubbard_u_workflow.md  migration.md  qe_wannier_bridge.md
docs/backends/: casm_ce_mc_ti.md  smol_ce_mc.md
docs/hpc/: install_casm.md  install_smol.md  slurm_casm_ce_mc_ti.sh  slurm_smol_ce_mc.sh
legacy_scripts/visualization/: plot_dE_live.gp  plot_dE_live_4.gp  plotvasp  plotvasp4
legacy_scripts/visualization/cp2k/: README.md  plot_cp2k_live.gp  plot_cp2k_md_live.gp  plotcp2k  plotcp2kall
legacy_scripts/visualization/lammps/: README.md  plot_lammps_thermo.gp  plotlammps  plotlammpsall
legacy_scripts/visualization/mace/: README.md  plot_mace_live.gp  plotmace.sh
src/atomi/: __init__.py  local_structure.py  thermo_db.py
src/atomi/aqueous/: __init__.py  thermohub_bridge.py
src/atomi/atat/: __init__.py  bridge.py
src/atomi/calphad/: __init__.py  env.py  export.py  mivm.py  sharp.py  workflow.py
src/atomi/cli/: bootstrap.py  compat.py  main.py  registry.py  vasp.py
src/atomi/codes/: __init__.py  cp2k.py  lammps.py  molcas.py  qe_wannier.py  turbomole.py  vasp.py  wannier_hubbard.py
src/atomi/core/: __init__.py  archive.py  cell.py  doctor.py  project.py  run_record.py  scheduler.py
src/atomi/cp2k/: __init__.py  acid_box.py  aimd_common.py  aimd_status.py  alkaline_box.py  blue_moon.py  bond_analysis.py  clean_run.py  extract_frames.py  geoopt_input.py  ligand_exchange.py  pymol_render.py  rotate_seed.py  water_entry.py
src/atomi/elastic/: __init__.py  derived.py  status.py  viz.py
src/atomi/lammps/: __init__.py  box.py  dump_extxyz.py  elastic.py  elastic_qha_md_compare.py  elements.py  green_kubo.py  pdf_match.py  pdfgetx3_status.py  poscar_data.py  postprocess.py  production_array.py  rdf_pdf.py  reverse_nemd.py  sluschi_entropy_overlay.py  thermal_conductivity.py  thermo_series.py  workflow.py  workflow_cli.py
src/atomi/md/: __init__.py  gsasii_bridge.py  molten_salt_liquid.py  pdf_fit_bridge.py  pdfxrd_manual.py  pdfxrd_manual_md_frame.py  pdfxrd_manual_static.py  pdfxrd_run.py  phase_order_guard.py  rdf_pdf.py
src/atomi/ml/: __init__.py  crystal_graph_dataset.py
src/atomi/ml/mace/: __init__.py  check_extxyz.py  convert.py  datasets.py  lammps2extxyz.py  outliers.py  train.py  update_outliers.py  vasp2extxyz.py
src/atomi/moose/: __init__.py  elastic_export.py  env.py  material_export.py  material_sources.py  workflow.py
src/atomi/qchem/: __init__.py  exatomic_bridge.py  molcas.py  molcas_postanalysis.py  molcas_root_helper.py  molcas_spin_plan.py  molcas_symmetry.py  openmolcas_bridge.py  pegamoid_bridge.py  turbomole.py
src/atomi/reporting/: __init__.py  paper_draft.py  prismml_export.py
src/atomi/shell/: README.md
src/atomi/sluschi/: __init__.py  bridge.py  route_c.py
src/atomi/structure/: __init__.py  adapters.py  elements.py  local.py
src/atomi/templates/lammps_workflow/: config_equilibration_example.json  config_production_example.json  run_lammps_gpu.sh  run_workflow.sh
src/atomi/templates/profiles/: generic_cpu.yaml
src/atomi/templates/schedulers/: pbs.sh  slurm.sh
src/atomi/thermo/: __init__.py  routes.py  schemas.py
src/atomi/thermo_prior/: __init__.py  aeris.py  cli.py  core.py  materials_project.py  mindat.py
src/atomi/vasp/: __init__.py  bader_charge.py  branch_screen.py  checks.py  compare_runs.py  defect_cloud.py  defects.py  elastic.py  hubbard_u.py  magmom.py  magnetic_entropy.py  md_snapshots.py  metastable_relax.py  phonopy_band.py  phonopy_neareq.py  phonopy_post.py  poscar_project.py  poscar_repeat.py  prefail.py  prep.py  qha_md_compare.py  qha_run.py  qha_summary.py  random_cell.py  relax_workflow.py  runlist.py  spin_assign.py  spin_report.py  stress_force.py
src/atomi/viz/: __init__.py  cell.py  cp2k.py  gk.py  lammps.py  mace.py  style.py  vasp_live.py
src/atomi/viz/cp2k/: cp2k_md_bondtrack.py  cp2k_md_eta.py  plot_cp2k_all.gp  plot_cp2k_geo_live.gp  plot_cp2k_live.gp  plot_cp2k_md_live.gp
src/atomi/viz/gnuplot/: lammps_thermo.gp  vasp_live.gp  vasp_live4.gp
src/atomi/viz/mace/: plot_mace_live.gp
src/atomi/xafs/: __init__.py  cp2k.py  fdmnes.py  larch_md.py  molcas_orbital_diagram.py  molcas_xanes_spectrum.py  ocean.py  routes.py  spectrum_overlay.py  status.py
src/atomi/zentropy/: __init__.py  active_learning.py  defect_thermo.py  export.py  free_energy.py  gnn_active_learning.py  mode4_surface.py  motif_cluster.py  motif_db.py  motif_paths.py  pocc_defects.py  sd_dd_thermo.py  solid_solution_scan.py  solve.py  stage_utils.py  status.py  workflow.py
src/atomi/zentropy/backends/: __init__.py  base.py  casm_ce_mc_ti.py  doctor.py  pocc_gqca.py  pocc_motif_mc.py  registry.py  smol_ce_mc.py
tests/: test_aqueous_thermohub_bridge.py  test_atat_bridge.py  test_calphad_export.py  test_calphad_mivm.py  test_calphad_sharp.py  test_calphad_workflow.py  test_cli_registry.py  test_codes_qe_wannier.py  test_core_run_record.py  test_cp2k_acid_box.py  test_cp2k_aimd_tools.py  test_cp2k_alkaline_box.py  test_cp2k_bond_analysis.py  test_cp2k_clean_run.py  test_cp2k_extract_frames.py  test_cp2k_geoopt_input.py  test_cp2k_pymol_render.py  test_cp2k_rotate_seed.py  test_cp2k_viz_bondtrack.py  test_cp2k_water_entry.py  test_crystal_graph_dataset.py  test_defect_backends.py  test_defect_thermo_export.py  test_doctor.py  test_elastic_status.py  test_elastic_viz.py  test_gnn_active_learning.py  test_gsasii_bridge.py  test_lammps_box.py  test_lammps_dump_extxyz.py  test_lammps_elastic.py  test_lammps_elastic_qha_md_compare.py  test_lammps_green_kubo.py  test_lammps_pdf_match.py  test_lammps_poscar_data.py  test_lammps_rdf_pdf.py  test_lammps_reverse_nemd.py  test_lammps_thermal_conductivity.py  test_lammps_workflow.py  test_mace_convert.py  (+57 more)
tools/: codex_sync_guard.py  shared_sync_guard.py
