[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atomi"
version = "0.3.14"
description = "Reusable HPC automation tools for atomistic modeling workflows."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Your Name" }
]
dependencies = [
  "ase>=3.23",
  "mp-api",
  "periodictable",
  "xraydb",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]
materials = [
  "ase>=3.23",
  "pymatgen>=2024.5",
]
calphad = [
  "pycalphad",
]
scattering = [
  "ase>=3.23",
  "periodictable",
  "xraydb",
]

[project.scripts]
atomi = "atomi.cli.main:main"
plotvasp = "atomi.cli.compat:plotvasp"
plotvasp4 = "atomi.cli.compat:plotvasp4"
plotlammps = "atomi.cli.compat:plotlammps"
plotcp2k = "atomi.cli.compat:plotcp2k"
plotcp2ck = "atomi.cli.compat:plotcp2k"
plotcp2kall = "atomi.cli.compat:plotcp2kall"
plotmace = "atomi.cli.compat:plotmace"
cp2k-build-acid-box = "atomi.cp2k.acid_box:main"
cp2k-geoopt-input = "atomi.cp2k.geoopt_input:main"
cp2k-extract-frames = "atomi.cp2k.extract_frames:main"
cp2k-rotate-seed = "atomi.cp2k.rotate_seed:main"
cp2k-bond-analysis = "atomi.cp2k.bond_analysis:main"
cp2k-clean-run = "atomi.cp2k.clean_run:main"
cp2k-water-entry = "atomi.cp2k.water_entry:main"
cp2k-pymol-render = "atomi.cp2k.pymol_render:main"
moose-doctor = "atomi.moose.env:main"
moose-info = "atomi.moose.workflow:info_main"
moose-smoke = "atomi.moose.workflow:smoke_main"
moose-write-submit = "atomi.moose.workflow:write_submit_main"
moose-qha-md-material = "atomi.moose.material_export:main"
moose-material-screen = "atomi.moose.material_sources:screen_main"
moose-material-source = "atomi.moose.material_sources:source_main"
moose-material-compare = "atomi.moose.material_sources:compare_main"
moose-thermal-stress = "atomi.moose.workflow:thermal_stress_main"
moose-uo2-thermal-stress = "atomi.moose.workflow:uo2_thermal_stress_main"
calphad-doctor = "atomi.calphad.env:main"
convertmace = "atomi.ml.mace.convert:main"
extv = "atomi.cli.vasp:extv"
checkvasp = "atomi.vasp.checks:checkvasp"
vasp-check = "atomi.vasp.checks:checkvasp"
checkscf = "atomi.vasp.checks:checkscf"
checkeng = "atomi.vasp.checks:vasp_energies"
vasp-energies = "atomi.vasp.checks:vasp_energies"
vasp-energy-table = "atomi.vasp.checks:vasp_energies"
magit = "atomi.vasp.magmom:main"
vasp-update-magmom = "atomi.vasp.magmom:main"
vasp-phonopy-neareq = "atomi.vasp.phonopy_neareq:main"
vasp-phonopy-post = "atomi.vasp.phonopy_post:main"
vasp-phonopy-band-plot = "atomi.vasp.phonopy_band:main"
vasp-prefail-candidates = "atomi.vasp.prefail:main"
vasp-stress-force-candidates = "atomi.vasp.stress_force:main"
vasp-defect-candidates = "atomi.vasp.defects:main"
vasp-md-snapshot-candidates = "atomi.vasp.md_snapshots:main"
vasp-qha-summary = "atomi.vasp.qha_summary:main"
vasp-qha-run = "atomi.vasp.qha_run:main"
vasp-qha-md-compare = "atomi.vasp.qha_md_compare:main"
thermo_qha_md = "atomi.vasp.qha_md_compare:main"
thermo_qha-md = "atomi.vasp.qha_md_compare:main"
atomi-doctor = "atomi.core.doctor:main"
confighpc = "atomi.core.doctor:config_hpc_main"
atomi-confighpc = "atomi.core.doctor:config_hpc_main"
md-engine-init = "atomi.lammps.workflow_cli:init_workflow"
md-engine = "atomi.lammps.workflow_cli:run_workflow"
md-engine-array = "atomi.lammps.workflow_cli:production_array"
lammps-md-init = "atomi.lammps.workflow_cli:init_workflow"
lammps-md-workflow = "atomi.lammps.workflow_cli:run_workflow"
lammps-md-array = "atomi.lammps.workflow_cli:production_array"
lammps-postprocess = "atomi.lammps.postprocess:main"
lammps-rdf-pdf = "atomi.lammps.rdf_pdf:main"
lammps-total-scattering = "atomi.lammps.rdf_pdf:main"
pdf_lammps = "atomi.lammps.rdf_pdf:main"
pdf_lammps_series = "atomi.lammps.rdf_pdf:main"
pdf_md_compare = "atomi.lammps.pdf_match:compare_main"
pdf_md_reweight = "atomi.lammps.pdf_match:reweight_main"
lammps-thermo-series = "atomi.lammps.thermo_series:main"
thermo_lammps = "atomi.lammps.thermo_series:main"
mace-build-dataset = "atomi.ml.mace.datasets:main"
mace-energy-outliers = "atomi.ml.mace.outliers:main"
mace-update-outliers = "atomi.ml.mace.update_outliers:main"
mace-check-extxyz = "atomi.ml.mace.check_extxyz:main"
mace-vasp2extxyz = "atomi.ml.mace.vasp2extxyz:main"
mace-convert-lammps = "atomi.ml.mace.convert:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
atomi = [
  "templates/**/*.yaml",
  "templates/**/*.sh",
  "templates/**/*.json",
  "shell/*.sh",
  "viz/gnuplot/*.gp",
  "viz/cp2k/*.gp",
  "viz/cp2k/*.py",
  "viz/mace/*.gp",
]

[tool.ruff]
line-length = 100
target-version = "py39"
