[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atomi"
version = "0.5.23"
description = "Reusable HPC workflow tools for computational materials science."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Your Name" }
]
dependencies = [
  "ase>=3.23",
  "mp-api",
  "periodictable",
  "xraydb",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]
materials = [
  "ase>=3.23",
  "pymatgen>=2024.5",
]
calphad = [
  "pycalphad",
]
scattering = [
  "ase>=3.23",
  "periodictable",
  "xraydb",
]
xafs = [
  "xraydb",
  "xraylarch; python_version >= '3.10'",
]
zentropy = [
  "pyzentropy; python_version >= '3.10'",
]
elastic-viz = []

[project.scripts]
atomi = "atomi.cli.main:main"
plotvasp = "atomi.cli.compat:plotvasp"
plotvasp4 = "atomi.cli.compat:plotvasp4"
plotlammps = "atomi.cli.compat:plotlammps"
plotcp2k = "atomi.cli.compat:plotcp2k"
plotcp2ck = "atomi.cli.compat:plotcp2k"
plotcp2kall = "atomi.cli.compat:plotcp2kall"
plotmace = "atomi.cli.compat:plotmace"
cp2k-build-acid-box = "atomi.cp2k.acid_box:main"
cp2k-geoopt-input = "atomi.cp2k.geoopt_input:main"
cp2k-extract-frames = "atomi.cp2k.extract_frames:main"
cp2k-rotate-seed = "atomi.cp2k.rotate_seed:main"
cp2k-bond-analysis = "atomi.cp2k.bond_analysis:main"
cp2k-clean-run = "atomi.cp2k.clean_run:main"
cp2k-water-entry = "atomi.cp2k.water_entry:main"
cp2k-pymol-render = "atomi.cp2k.pymol_render:main"
moose-doctor = "atomi.moose.env:main"
moose_status = "atomi.moose.env:main"
moose-status = "atomi.moose.env:main"
moose-info = "atomi.moose.workflow:info_main"
moose-smoke = "atomi.moose.workflow:smoke_main"
moose-write-submit = "atomi.moose.workflow:write_submit_main"
moose-qha-md-material = "atomi.moose.material_export:main"
moose-elastic-export = "atomi.moose.elastic_export:main"
moose_elastic_export = "atomi.moose.elastic_export:main"
moose-material-screen = "atomi.moose.material_sources:screen_main"
moose-material-source = "atomi.moose.material_sources:source_main"
moose-material-compare = "atomi.moose.material_sources:compare_main"
moose-thermal-stress = "atomi.moose.workflow:thermal_stress_main"
moose-uo2-thermal-stress = "atomi.moose.workflow:uo2_thermal_stress_main"
calphad-doctor = "atomi.calphad.env:main"
calphad_status = "atomi.calphad.env:main"
calphad-status = "atomi.calphad.env:main"
calphad_export = "atomi.calphad.export:main"
calphad-export = "atomi.calphad.export:main"
atat-bridge = "atomi.atat.bridge:main"
atat-doctor = "atomi.atat.bridge:doctor_main"
atat-status = "atomi.atat.bridge:doctor_main"
materials-opt = "atomi.atat.bridge:quick_opt_main"
quick-materials-opt = "atomi.atat.bridge:quick_opt_main"
paper-draft = "atomi.reporting.paper_draft:main"
report-draft = "atomi.reporting.paper_draft:main"
atomi-paper-draft = "atomi.reporting.paper_draft:main"
zentropy_motif_db = "atomi.zentropy.motif_db:main"
zentropy-motif-db = "atomi.zentropy.motif_db:main"
defect_motif_db = "atomi.zentropy.motif_db:main"
defect-motif-db = "atomi.zentropy.motif_db:main"
midx = "atomi.zentropy.motif_paths:main"
motifpath = "atomi.zentropy.motif_paths:main"
motifpaths = "atomi.zentropy.motif_paths:main"
motif-paths = "atomi.zentropy.motif_paths:main"
zentropy-motif-paths = "atomi.zentropy.motif_paths:main"
zentropy_status = "atomi.zentropy.status:main"
zentropy-status = "atomi.zentropy.status:main"
zentropy_workflow = "atomi.zentropy.workflow:main"
zentropy-workflow = "atomi.zentropy.workflow:main"
zentropy_free_energy = "atomi.zentropy.free_energy:main"
zentropy-free-energy = "atomi.zentropy.free_energy:main"
zentropy_solve = "atomi.zentropy.solve:main"
zentropy-solve = "atomi.zentropy.solve:main"
zentropy_export = "atomi.zentropy.export:main"
zentropy-export = "atomi.zentropy.export:main"
zentropy_active_learning = "atomi.zentropy.active_learning:main"
zentropy-active-learning = "atomi.zentropy.active_learning:main"
mlip_solid_solution_scan = "atomi.zentropy.solid_solution_scan:main"
mlip-solid-solution-scan = "atomi.zentropy.solid_solution_scan:main"
motif_cluster = "atomi.zentropy.motif_cluster:main"
motif-cluster = "atomi.zentropy.motif_cluster:main"
zentropy_motif_cluster = "atomi.zentropy.motif_cluster:main"
zentropy-motif-cluster = "atomi.zentropy.motif_cluster:main"
defect_thermo_export = "atomi.zentropy.defect_thermo:main"
defect-thermo-export = "atomi.zentropy.defect_thermo:main"
sd-dd-thermo = "atomi.zentropy.sd_dd_thermo:main"
sd_dd_thermo = "atomi.zentropy.sd_dd_thermo:main"
defect-sd-dd = "atomi.zentropy.sd_dd_thermo:main"
defect-chem = "atomi.zentropy.sd_dd_thermo:main"
convertmace = "atomi.ml.mace.convert:main"
extv = "atomi.cli.vasp:extv"
checkvasp = "atomi.vasp.checks:checkvasp"
vasp-check = "atomi.vasp.checks:checkvasp"
checkscf = "atomi.vasp.checks:checkscf"
checkeng = "atomi.vasp.checks:vasp_energies"
vasp-energies = "atomi.vasp.checks:vasp_energies"
vasp-energy-table = "atomi.vasp.checks:vasp_energies"
magit = "atomi.vasp.magmom:main"
vasp-update-magmom = "atomi.vasp.magmom:main"
vasp-spin-report = "atomi.vasp.spin_report:main"
spin-report = "atomi.vasp.spin_report:main"
spincheck = "atomi.vasp.spin_report:main"
vasp-compare-runs = "atomi.vasp.compare_runs:main"
vasp-run-compare = "atomi.vasp.compare_runs:main"
vaspcompare = "atomi.vasp.compare_runs:main"
comparevasp = "atomi.vasp.compare_runs:main"
vasp-branch-screen = "atomi.vasp.branch_screen:main"
screen-vasp-branches = "atomi.vasp.branch_screen:main"
vasp-stage1-screen = "atomi.vasp.branch_screen:main"
spinscreen = "atomi.vasp.branch_screen:main"
vasp-branch-live = "atomi.vasp.branch_screen:monitor_main"
vasp-branch-monitor = "atomi.vasp.branch_screen:monitor_main"
spinlive = "atomi.vasp.branch_screen:monitor_main"
vasp-phonopy-neareq = "atomi.vasp.phonopy_neareq:main"
vasp-phonopy-post = "atomi.vasp.phonopy_post:main"
vasp-phonopy-band-plot = "atomi.vasp.phonopy_band:main"
vasp-prefail-candidates = "atomi.vasp.prefail:main"
vasp-stress-force-candidates = "atomi.vasp.stress_force:main"
vasp-defect-candidates = "atomi.vasp.defects:main"
vasp-defect-cloud = "atomi.vasp.defect_cloud:main"
vasp-md-snapshot-candidates = "atomi.vasp.md_snapshots:main"
vasp-qha-summary = "atomi.vasp.qha_summary:main"
vasp-qha-run = "atomi.vasp.qha_run:main"
vasp-qha-md-compare = "atomi.vasp.qha_md_compare:main"
vasp-elastic = "atomi.vasp.elastic:main"
vasp_elastic = "atomi.vasp.elastic:main"
thermo_qha_md = "atomi.vasp.qha_md_compare:main"
thermo_qha-md = "atomi.vasp.qha_md_compare:main"
atomi-doctor = "atomi.core.doctor:main"
confighpc = "atomi.core.doctor:config_hpc_main"
atomi-confighpc = "atomi.core.doctor:config_hpc_main"
md-engine-init = "atomi.lammps.workflow_cli:init_workflow"
md-engine = "atomi.lammps.workflow_cli:run_workflow"
md-engine-array = "atomi.lammps.workflow_cli:production_array"
lammps-md-init = "atomi.lammps.workflow_cli:init_workflow"
lammps-md-workflow = "atomi.lammps.workflow_cli:run_workflow"
lammps-md-array = "atomi.lammps.workflow_cli:production_array"
poscar2lammps = "atomi.lammps.poscar_data:main"
vasp2lammps-data = "atomi.lammps.poscar_data:main"
lammps-data-init = "atomi.lammps.poscar_data:main"
lammps2extxyz = "atomi.lammps.dump_extxyz:main"
lammps-to-extxyz = "atomi.lammps.dump_extxyz:main"
lammps-dump-extxyz = "atomi.lammps.dump_extxyz:main"
lammps-postprocess = "atomi.lammps.postprocess:main"
lammps-rdf-pdf = "atomi.lammps.rdf_pdf:main"
lammps-total-scattering = "atomi.lammps.rdf_pdf:main"
pdf_lammps = "atomi.lammps.rdf_pdf:main"
pdf_lammps_series = "atomi.lammps.rdf_pdf:main"
pdfgetx3_status = "atomi.lammps.pdfgetx3_status:main"
pdfgetx3-status = "atomi.lammps.pdfgetx3_status:main"
pdf_md_compare = "atomi.lammps.pdf_match:compare_main"
pdf_md_reweight = "atomi.lammps.pdf_match:reweight_main"
xafs_lammps_prepare = "atomi.xafs.larch_md:prepare_main"
xafs_cp2k_prepare = "atomi.xafs.cp2k:main"
xafs_larch_run = "atomi.xafs.larch_md:larch_run_main"
xafs_md_compare = "atomi.xafs.larch_md:compare_main"
xafs_status = "atomi.xafs.status:main"
lammps-thermo-series = "atomi.lammps.thermo_series:main"
thermo_lammps = "atomi.lammps.thermo_series:main"
thermal_k_lammps = "atomi.lammps.thermal_conductivity:main"
thermal-k-lammps = "atomi.lammps.thermal_conductivity:main"
thermal_gk_lammps = "atomi.lammps.green_kubo:main"
thermal-gk-lammps = "atomi.lammps.green_kubo:main"
gk-lammps = "atomi.lammps.green_kubo:main"
elastic_lammps = "atomi.lammps.elastic:main"
elastic_viz = "atomi.elastic.viz:main"
elastic-viz = "atomi.elastic.viz:main"
elate_status = "atomi.elastic.status:main"
elastic_viz_status = "atomi.elastic.status:main"
elastic_qha_md_compare = "atomi.lammps.elastic_qha_md_compare:main"
elastic_vasp_md_compare = "atomi.lammps.elastic_qha_md_compare:main"
elastic-vasp-md-compare = "atomi.lammps.elastic_qha_md_compare:main"
mace-build-dataset = "atomi.ml.mace.datasets:main"
mace-energy-outliers = "atomi.ml.mace.outliers:main"
mace-update-outliers = "atomi.ml.mace.update_outliers:main"
mace-check-extxyz = "atomi.ml.mace.check_extxyz:main"
mace-vasp2extxyz = "atomi.ml.mace.vasp2extxyz:main"
mace-convert-lammps = "atomi.ml.mace.convert:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
atomi = [
  "templates/**/*.yaml",
  "templates/**/*.sh",
  "templates/**/*.json",
  "shell/*.sh",
  "viz/gnuplot/*.gp",
  "viz/cp2k/*.gp",
  "viz/cp2k/*.py",
  "viz/mace/*.gp",
]

[tool.ruff]
line-length = 100
target-version = "py39"
