[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atomi"
version = "0.9.2"
description = "Reusable HPC workflow tools for computational materials science."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Your Name" }
]
dependencies = [
  "ase>=3.23",
  "mp-api",
  "periodictable",
  "xraydb",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]
materials = [
  "ase>=3.23",
  "pymatgen>=2024.5",
]
calphad = [
  "pycalphad",
]
scattering = [
  "ase>=3.23",
  "periodictable",
  "xraydb",
]
xafs = [
  "xraydb",
  "xraylarch; python_version >= '3.10'",
]
zentropy = [
  "pyzentropy; python_version >= '3.10'",
]
defects = [
  "numpy",
  "scipy",
  "pandas",
  "pydantic",
  "networkx",
  "spglib",
  "pymatgen",
  "ase>=3.23",
  "h5py",
  "netCDF4",
  "xarray",
]
smol = [
  "smol",
  "pymatgen",
  "monty",
]
casm_python = [
  "casm-python",
]
casm_modular = [
  "libcasm-xtal",
  "libcasm-composition",
  "libcasm-mapping",
  "libcasm-configuration",
  "libcasm-clexulator",
  "casm-bset",
  "libcasm-monte",
  "libcasm-clexmonte",
  "casm-project",
  "casm-tools",
]
mode4 = [
  "smol",
  "pymatgen",
  "monty",
  "joblib",
]
elastic-viz = []

[project.scripts]
atomi = "atomi.cli.bootstrap:main"
local-structure = "atomi.local_structure:main"
local-cluster = "atomi.local_structure:main"
structure-cluster = "atomi.local_structure:main"
atomi-local-structure = "atomi.local_structure:main"
plotvasp = "atomi.cli.compat:plotvasp"
plotvasp4 = "atomi.cli.compat:plotvasp4"
plotlammps = "atomi.cli.compat:plotlammps"
plotgk = "atomi.cli.compat:plotgk"
plotrnemd = "atomi.cli.compat:plotrnemd"
listvasp = "atomi.vasp.runlist:main"
plotcp2k = "atomi.cli.compat:plotcp2k"
plotcp2ck = "atomi.cli.compat:plotcp2k"
plotcp2kall = "atomi.cli.compat:plotcp2kall"
plotmace = "atomi.cli.compat:plotmace"
cp2k-build-acid-box = "atomi.cp2k.acid_box:main"
cp2k-build-alkaline-box = "atomi.cp2k.alkaline_box:main"
cp2k-geoopt-input = "atomi.cp2k.geoopt_input:main"
cp2k-extract-frames = "atomi.cp2k.extract_frames:main"
cp2k-rotate-seed = "atomi.cp2k.rotate_seed:main"
cp2k-bond-analysis = "atomi.cp2k.bond_analysis:main"
cp2k-clean-run = "atomi.cp2k.clean_run:main"
cp2k-water-entry = "atomi.cp2k.water_entry:main"
cp2k-pymol-render = "atomi.cp2k.pymol_render:main"
cp2k-aimd-status = "atomi.cp2k.aimd_status:main"
cp2k-ligand-exchange-summary = "atomi.cp2k.ligand_exchange:main"
cp2k-blue-moon-ti = "atomi.cp2k.blue_moon:main"
cp2k-umbrella-pmf = "atomi.cp2k.blue_moon:main"
turbomole-define = "atomi.qchem.turbomole:main"
turbomole_define = "atomi.qchem.turbomole:main"
tm-define = "atomi.qchem.turbomole:main"
molcas-cluster = "atomi.qchem.molcas:main"
molcas_cluster = "atomi.qchem.molcas:main"
openmolcas-cluster = "atomi.qchem.molcas:main"
moose-doctor = "atomi.moose.env:main"
moose_status = "atomi.moose.env:main"
moose-status = "atomi.moose.env:main"
moose-info = "atomi.moose.workflow:info_main"
moose-smoke = "atomi.moose.workflow:smoke_main"
moose-write-submit = "atomi.moose.workflow:write_submit_main"
moose-qha-md-material = "atomi.moose.material_export:main"
moose-elastic-export = "atomi.moose.elastic_export:main"
moose_elastic_export = "atomi.moose.elastic_export:main"
moose-material-screen = "atomi.moose.material_sources:screen_main"
moose-material-source = "atomi.moose.material_sources:source_main"
moose-material-compare = "atomi.moose.material_sources:compare_main"
moose-thermal-stress = "atomi.moose.workflow:thermal_stress_main"
moose-uo2-thermal-stress = "atomi.moose.workflow:uo2_thermal_stress_main"
calphad-doctor = "atomi.calphad.env:main"
calphad_status = "atomi.calphad.env:main"
calphad-status = "atomi.calphad.env:main"
calphad_export = "atomi.calphad.export:main"
calphad-export = "atomi.calphad.export:main"
calphad_mivm = "atomi.calphad.mivm:main"
calphad-mivm = "atomi.calphad.mivm:main"
calphad_workflow = "atomi.calphad.workflow:main"
calphad-workflow = "atomi.calphad.workflow:main"
calphad_sharp = "atomi.calphad.sharp:main"
calphad-sharp = "atomi.calphad.sharp:main"
aq-thermo-bridge = "atomi.aqueous.thermohub_bridge:main"
aq_thermo_bridge = "atomi.aqueous.thermohub_bridge:main"
thermofun-bridge = "atomi.aqueous.thermohub_bridge:main"
thermohub-bridge = "atomi.aqueous.thermohub_bridge:main"
sluschi_bridge = "atomi.sluschi.bridge:main"
sluschi-bridge = "atomi.sluschi.bridge:main"
lammps_sconfig = "atomi.sluschi.bridge:sconfig_cli_main"
lammps-sconfig = "atomi.sluschi.bridge:sconfig_cli_main"
sluschi-entropy-summary = "atomi.sluschi.bridge:entropy_summary_cli_main"
lammps-sluschi-entropy = "atomi.sluschi.bridge:entropy_summary_cli_main"
sluschi-phase-health = "atomi.sluschi.bridge:phase_health_cli_main"
sluschi-workflow-guide = "atomi.sluschi.bridge:workflow_guide_cli_main"
sluschi-melting-anchor = "atomi.sluschi.bridge:melting_anchor_cli_main"
sluschi-cp2k-prep = "atomi.sluschi.bridge:cp2k_prep_cli_main"
cp2k-sluschi-prep = "atomi.sluschi.bridge:cp2k_prep_cli_main"
sluschi-vasp-prep = "atomi.sluschi.bridge:vasp_prep_cli_main"
vasp-sluschi-prep = "atomi.sluschi.bridge:vasp_prep_cli_main"
md-rdf-pdf = "atomi.md.rdf_pdf:main"
md-rdf_pdf = "atomi.md.rdf_pdf:main"
vasp-xdatcar-rdf-pdf = "atomi.md.rdf_pdf:main"
atat-bridge = "atomi.atat.bridge:main"
atat-doctor = "atomi.atat.bridge:doctor_main"
atat-status = "atomi.atat.bridge:doctor_main"
materials-opt = "atomi.atat.bridge:quick_opt_main"
quick-materials-opt = "atomi.atat.bridge:quick_opt_main"
paper-draft = "atomi.reporting.paper_draft:main"
report-draft = "atomi.reporting.paper_draft:main"
atomi-paper-draft = "atomi.reporting.paper_draft:main"
atomi-prismml-export = "atomi.reporting.prismml_export:main"
prismml-export = "atomi.reporting.prismml_export:main"
zentropy_motif_db = "atomi.zentropy.motif_db:main"
zentropy-motif-db = "atomi.zentropy.motif_db:main"
defect_motif_db = "atomi.zentropy.motif_db:main"
defect-motif-db = "atomi.zentropy.motif_db:main"
midx = "atomi.zentropy.motif_paths:main"
motifpath = "atomi.zentropy.motif_paths:main"
motifpaths = "atomi.zentropy.motif_paths:main"
motif-paths = "atomi.zentropy.motif_paths:main"
zentropy-motif-paths = "atomi.zentropy.motif_paths:main"
zentropy_status = "atomi.zentropy.status:main"
zentropy-status = "atomi.zentropy.status:main"
zentropy_workflow = "atomi.zentropy.workflow:main"
zentropy-workflow = "atomi.zentropy.workflow:main"
zentropy_free_energy = "atomi.zentropy.free_energy:main"
zentropy-free-energy = "atomi.zentropy.free_energy:main"
zentropy_solve = "atomi.zentropy.solve:main"
zentropy-solve = "atomi.zentropy.solve:main"
zentropy_export = "atomi.zentropy.export:main"
zentropy-export = "atomi.zentropy.export:main"
zentropy_mode4_surface = "atomi.zentropy.mode4_surface:main"
zentropy-mode4-surface = "atomi.zentropy.mode4_surface:main"
mode4-surface = "atomi.zentropy.mode4_surface:main"
zentropy_gnn_active_learning = "atomi.zentropy.gnn_active_learning:main"
zentropy-gnn-active-learning = "atomi.zentropy.gnn_active_learning:main"
gnn-active-learning = "atomi.zentropy.gnn_active_learning:main"
crystal-graph-dataset = "atomi.ml.crystal_graph_dataset:console_main"
crystal_graph_dataset = "atomi.ml.crystal_graph_dataset:console_main"
atomi-graph-dataset = "atomi.ml.crystal_graph_dataset:console_main"
thermo-prior = "atomi.thermo_prior.cli:console_main"
thermo_prior = "atomi.thermo_prior.cli:console_main"
thermo-prior-mp = "atomi.thermo_prior.materials_project:console_main"
materials-project-prior = "atomi.thermo_prior.materials_project:console_main"
mp-thermo-cache = "atomi.thermo_prior.materials_project:console_main"
mindat-bridge = "atomi.thermo_prior.mindat:console_main"
mindat-api = "atomi.thermo_prior.mindat:console_main"
zentropy_active_learning = "atomi.zentropy.active_learning:main"
zentropy-active-learning = "atomi.zentropy.active_learning:main"
mlip_solid_solution_scan = "atomi.zentropy.solid_solution_scan:main"
mlip-solid-solution-scan = "atomi.zentropy.solid_solution_scan:main"
motif_cluster = "atomi.zentropy.motif_cluster:main"
motif-cluster = "atomi.zentropy.motif_cluster:main"
zentropy_motif_cluster = "atomi.zentropy.motif_cluster:main"
zentropy-motif-cluster = "atomi.zentropy.motif_cluster:main"
defect_thermo_export = "atomi.zentropy.defect_thermo:main"
defect-thermo-export = "atomi.zentropy.defect_thermo:main"
pocc-zentropy-defects = "atomi.zentropy.pocc_defects:main"
pocc_zentropy_defects = "atomi.zentropy.pocc_defects:main"
atomi-defects = "atomi.zentropy.pocc_defects:main"
sd-dd-thermo = "atomi.zentropy.sd_dd_thermo:main"
sd_dd_thermo = "atomi.zentropy.sd_dd_thermo:main"
defect-sd-dd = "atomi.zentropy.sd_dd_thermo:main"
defect-chem = "atomi.zentropy.sd_dd_thermo:main"
convertmace = "atomi.ml.mace.convert:main"
extv = "atomi.cli.vasp:extv"
checkvasp = "atomi.vasp.checks:checkvasp"
vasp-check = "atomi.vasp.checks:checkvasp"
checkscf = "atomi.vasp.checks:checkscf"
checkeng = "atomi.vasp.checks:vasp_energies"
vasp-energies = "atomi.vasp.checks:vasp_energies"
vasp-energy-table = "atomi.vasp.checks:vasp_energies"
magit = "atomi.vasp.magmom:main"
vasp-update-magmom = "atomi.vasp.magmom:main"
vasp-spin-report = "atomi.vasp.spin_report:main"
spin-report = "atomi.vasp.spin_report:main"
spincheck = "atomi.vasp.spin_report:main"
vasp-magnetic-entropy = "atomi.vasp.magnetic_entropy:main"
magnetic-entropy = "atomi.vasp.magnetic_entropy:main"
vasp-mag-entropy = "atomi.vasp.magnetic_entropy:main"
vasp-compare-runs = "atomi.vasp.compare_runs:main"
vasp-run-compare = "atomi.vasp.compare_runs:main"
vaspcompare = "atomi.vasp.compare_runs:main"
comparevasp = "atomi.vasp.compare_runs:main"
vasp-metastable-relax = "atomi.vasp.metastable_relax:main"
vasp-relax-workflow = "atomi.vasp.relax_workflow:main"
vasp-selective-dynamics = "atomi.vasp.metastable_relax:selective_main"
vasp-structure-fingerprint = "atomi.vasp.metastable_relax:fingerprint_main"
vasp-metastable-status = "atomi.vasp.metastable_relax:status_main"
vasp-metastable-advance = "atomi.vasp.metastable_relax:advance_main"
vasp-branch-screen = "atomi.vasp.branch_screen:main"
screen-vasp-branches = "atomi.vasp.branch_screen:main"
vasp-stage1-screen = "atomi.vasp.branch_screen:main"
spinscreen = "atomi.vasp.branch_screen:main"
vasp-branch-live = "atomi.vasp.branch_screen:monitor_main"
vasp-branch-monitor = "atomi.vasp.branch_screen:monitor_main"
spinlive = "atomi.vasp.branch_screen:monitor_main"
vasp-phonopy-neareq = "atomi.vasp.phonopy_neareq:main"
vasp-phonopy-post = "atomi.vasp.phonopy_post:main"
vasp-phonopy-band-plot = "atomi.vasp.phonopy_band:main"
vasp-prefail-candidates = "atomi.vasp.prefail:main"
vasp-stress-force-candidates = "atomi.vasp.stress_force:main"
vasp-defect-candidates = "atomi.vasp.defects:main"
vasp-defect-cloud = "atomi.vasp.defect_cloud:main"
vasp-project-poscar = "atomi.vasp.poscar_project:main"
poscar-project-elements = "atomi.vasp.poscar_project:main"
rand_cell = "atomi.vasp.random_cell:main"
rand-cell = "atomi.vasp.random_cell:main"
vasp-assign-spins = "atomi.vasp.spin_assign:main"
assign-spins = "atomi.vasp.spin_assign:main"
vasp-repeat-poscar = "atomi.vasp.poscar_repeat:main"
poscar-repeat = "atomi.vasp.poscar_repeat:main"
repeat-poscar = "atomi.vasp.poscar_repeat:main"
vasp-md-snapshot-candidates = "atomi.vasp.md_snapshots:main"
vasp-qha-summary = "atomi.vasp.qha_summary:main"
vasp-qha-run = "atomi.vasp.qha_run:main"
vasp-qha-md-compare = "atomi.vasp.qha_md_compare:main"
vasp-elastic = "atomi.vasp.elastic:main"
vasp_elastic = "atomi.vasp.elastic:main"
thermo_qha_md = "atomi.vasp.qha_md_compare:main"
thermo_qha-md = "atomi.vasp.qha_md_compare:main"
thermo-routes = "atomi.thermo.routes:main"
thermo_routes = "atomi.thermo.routes:main"
atomi-doctor = "atomi.core.doctor:main"
confighpc = "atomi.core.doctor:config_hpc_main"
atomi-confighpc = "atomi.core.doctor:config_hpc_main"
md-engine-init = "atomi.lammps.workflow_cli:init_workflow"
md-engine = "atomi.lammps.workflow_cli:run_workflow"
md-engine-array = "atomi.lammps.workflow_cli:production_array"
lammps-md-init = "atomi.lammps.workflow_cli:init_workflow"
lammps-md-workflow = "atomi.lammps.workflow_cli:run_workflow"
lammps-md-array = "atomi.lammps.workflow_cli:production_array"
poscar2lammps = "atomi.lammps.poscar_data:main"
vasp2lammps-data = "atomi.lammps.poscar_data:main"
lammps-data-init = "atomi.lammps.poscar_data:main"
lammps2extxyz = "atomi.lammps.dump_extxyz:main"
lammps-to-extxyz = "atomi.lammps.dump_extxyz:main"
lammps-dump-extxyz = "atomi.lammps.dump_extxyz:main"
lammps-postprocess = "atomi.lammps.postprocess:main"
lammps-rdf-pdf = "atomi.lammps.rdf_pdf:main"
lammps-total-scattering = "atomi.lammps.rdf_pdf:main"
pdf_lammps = "atomi.lammps.rdf_pdf:main"
pdf_lammps_series = "atomi.lammps.rdf_pdf:main"
pdfgetx3_status = "atomi.lammps.pdfgetx3_status:main"
pdfgetx3-status = "atomi.lammps.pdfgetx3_status:main"
pdf_md_compare = "atomi.lammps.pdf_match:compare_main"
pdf_md_reweight = "atomi.lammps.pdf_match:reweight_main"
xafs_lammps_prepare = "atomi.xafs.larch_md:prepare_main"
xafs_cp2k_prepare = "atomi.xafs.cp2k:main"
xafs_larch_run = "atomi.xafs.larch_md:larch_run_main"
xafs_md_compare = "atomi.xafs.larch_md:compare_main"
xafs_status = "atomi.xafs.status:main"
lammps-thermo-series = "atomi.lammps.thermo_series:main"
thermo_lammps = "atomi.lammps.thermo_series:main"
lammps-sconfig-qha-overlay = "atomi.lammps.sluschi_entropy_overlay:main"
sluschi-qha-entropy-overlay = "atomi.lammps.sluschi_entropy_overlay:main"
thermal_k_lammps = "atomi.lammps.thermal_conductivity:main"
thermal-k-lammps = "atomi.lammps.thermal_conductivity:main"
thermal_k_crosscheck = "atomi.lammps.thermal_conductivity:main"
thermal-k-crosscheck = "atomi.lammps.thermal_conductivity:main"
thermal_gk_lammps = "atomi.lammps.green_kubo:main"
thermal-gk-lammps = "atomi.lammps.green_kubo:main"
gk-lammps = "atomi.lammps.green_kubo:main"
thermal_rnemd_lammps = "atomi.lammps.reverse_nemd:main"
thermal-rnemd-lammps = "atomi.lammps.reverse_nemd:main"
rnemd-lammps = "atomi.lammps.reverse_nemd:main"
elastic_lammps = "atomi.lammps.elastic:main"
elastic_viz = "atomi.elastic.viz:main"
elastic-viz = "atomi.elastic.viz:main"
elate_status = "atomi.elastic.status:main"
elastic_viz_status = "atomi.elastic.status:main"
elastic_qha_md_compare = "atomi.lammps.elastic_qha_md_compare:main"
elastic_vasp_md_compare = "atomi.lammps.elastic_qha_md_compare:main"
elastic-vasp-md-compare = "atomi.lammps.elastic_qha_md_compare:main"
mace-build-dataset = "atomi.ml.mace.datasets:main"
mace-dataset = "atomi.ml.mace.datasets:main"
build-mace-dataset = "atomi.ml.mace.datasets:main"
mace-energy-outliers = "atomi.ml.mace.outliers:main"
mace-update-outliers = "atomi.ml.mace.update_outliers:main"
mace-check-extxyz = "atomi.ml.mace.check_extxyz:main"
mace-vasp2extxyz = "atomi.ml.mace.vasp2extxyz:main"
vasp2extxyz = "atomi.ml.mace.vasp2extxyz:main"
mace-vasp = "atomi.ml.mace.vasp2extxyz:main"
mace-train = "atomi.ml.mace.train:main"
mace-train-submit = "atomi.ml.mace.train:submit_main"
mace-convert-lammps = "atomi.ml.mace.convert:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
atomi = [
  "templates/**/*.yaml",
  "templates/**/*.sh",
  "templates/**/*.json",
  "shell/*.sh",
  "viz/gnuplot/*.gp",
  "viz/cp2k/*.gp",
  "viz/cp2k/*.py",
  "viz/mace/*.gp",
]

[tool.ruff]
line-length = 100
target-version = "py39"
